2007-06-26  Murray Cumming  <murrayc@murrayc.com>

	* examples/book/builder/basic/basic.ui:
	* examples/book/builder/basic/main.cc:
	* examples/book/builder/derived/basic.ui:
	* examples/book/builder/derived/main.cc:
	Convert the libglade .glade files to GtkBuilder .ui files, 
	with gtk-builder-convert script from GTK+.
	* gtk/src/builder.ccg:
	* gtk/src/builder.hg: Addded create_from_file() and create_from_string(), 
	as conveniences. Changed the add_from_file() parameter to a std::string, 
	as all filenames should be, because their encoding is unknown.
	Added a add_from_string() version that accepts a simple std::string.

2007-06-24  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/gtk_enums.defs: Regenerated with enums.pl
	* gtk/src/gtk_methods.defs: Regenerated with h2defs.py.

	* gtk/src/Makefile_list_of_hg.am_fragment:
	* gtk/src/builder.ccg:
	* gtk/src/builder.hg: Added wrapper for GtkBuilder, taking code from 
	libglademm so that it instantiates derived GTypes by using the vfunc, 
	and has templated get_widget() and get_widet_derived() methods.
	* gtk/gtkmm.h: Added builder.h

	* configure.in:
	* examples/book/builder/basic/
	* examples/book/builder/derived/
	Added GtkBuilder versions of the libgladem examples. These will not 
	work until I find the script to conver the glade files to GtkBuilder 
	files, or find a UI editor that creates GtkBuilder files.

2007-06-22  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/recentaction.hg: Constuctor and create(): 
	Added default values for the tooltips and stock_id paramters,
	though I think none of these should need to specified.
	See bug #450032.
	* gtk/gtkmm.h: Added recentaction.h
	* examples/book/recent_files/examplewindow.cc: Used the RecentAction to 
	create a sub-menu.

2007-06-22  Murray Cumming  <murrayc@murrayc.com>

	* examples/book/treeview/editable_cells/examplewindow.cc:
	* examples/book/treeview/editable_cells/examplewindow.h: