@@ -32,7 +32,7 @@ files_general_hg = aboutdialog.hg accelgroup.hg accellabel.hg action.hg actiongr
           table.hg targetlist.hg tearoffmenuitem.hg \
           textattributes.hg textbuffer.hg textchildanchor.hg textiter.hg textmark.hg texttag.hg texttagtable.hg textview.hg \
           toggleaction.hg \
-          togglebutton.hg toggletoolbutton.hg toolbar.hg toolitem.hg toolbutton.hg tooltips.hg \
+          togglebutton.hg toggletoolbutton.hg toolbar.hg toolitem.hg toolbutton.hg tooltips.hg tooltip.hg \
           treedragdest.hg treedragsource.hg treepath.hg treerowreference.hg treeselection.hg treesortable.hg \
           treeiter.hg treemodel.hg treemodelfilter.hg treemodelsort.hg treestore.hg treeview.hg treeviewcolumn.hg \
           viewport.hg volumebutton.hg uimanager.hg \
