@@ -34105,6 +34105,19 @@
   )
 )
 
+
+(define-signal query-tooltip
+  (of-object "GtkWidget")
+  (return-type "gboolean")
+  (when "last")
+  (parameters
+    '("gint" "p0")
+    '("gint" "p1")
+    '("gboolean" "p2")
+    '("GtkTooltip*" "p3")
+  )
+)
+
 (define-signal popup-menu
   (of-object "GtkWidget")
   (return-type "gboolean")
@@ -34310,6 +34323,33 @@
   (of-object "GtkWidget")
   (prop-type "GParamBoolean")
   (docs "Whether gtk_widget_show_all should not affect this widget")
+  (readable #t)
+  (writable #t)
+  (construct-only #f)
+)
+
+(define-property has-tooltip
+  (of-object "GtkWidget")
+  (prop-type "GParamBoolean")
+  (docs "Whether this widget has a tooltip")
+  (readable #t)
+  (writable #t)
+  (construct-only #f)
+)
+
+(define-property tooltip-markup
+  (of-object "GtkWidget")
+  (prop-type "GParamString")
+  (docs "The contents of the tooltip for this widget")
+  (readable #t)
+  (writable #t)
+  (construct-only #f)
+)
+
+(define-property tooltip-text
+  (of-object "GtkWidget")
+  (prop-type "GParamString")
+  (docs "The contents of the tooltip for this widget")
   (readable #t)
   (writable #t)
   (construct-only #f)
