@@ -1,0 +1,45 @@
+/* Copyright (C) 2007 The gtkmm Development Team
+ *
+ * This library is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU Library General Public
+ * License as published by the Free Software Foundation; either
+ * version 2 of the License, or (at your option) any later version.
+ *
+ * This library is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * Library General Public License for more details.
+ *
+ * You should have received a copy of the GNU Library General Public
+ * License along with this library; if not, write to the Free
+ * Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+ */
+
+#include <glibmm/object.h>
+#include <gdkmm/pixbuf.h>
+#include <gtkmm/enums.h>
+#include <gtkmm/widget.h>
+
+_DEFS(gtkmm,gtk)
+_PINCLUDE(glibmm/private/object_p.h)
+
+namespace Gtk
+{
+
+class Tooltip : public Glib::Object
+{
+  _CLASS_GOBJECT(Tooltip, GtkTooltip, GTK_TOOLTIP, Glib::Object, GObject)
+
+public:
+
+  _WRAP_METHOD(void set_markup(const Glib::ustring& markup), gtk_tooltip_set_markup)
+  _WRAP_METHOD(void set_text(const Glib::ustring& markup), gtk_tooltip_set_text)
+  _WRAP_METHOD(void set_icon(const Glib::RefPtr<Gdk::Pixbuf>& pixbuf), gtk_tooltip_set_icon)
+  _WRAP_METHOD(void set_icon_from_stock(const StockID& stock_id, IconSize size), gtk_tooltip_set_icon_from_stock)
+  _WRAP_METHOD(void set_custom(Widget& custom_widget), gtk_tooltip_set_custom)
+
+  _IGNORE(gtk_tooltip_trigger_tooltip_query)
+  static void trigger_tooltip_query(const Glib::RefPtr<Gdk::Display>& display);
+};
+
+} // namespace Gtk
