@@ -26,6 +26,7 @@
 #include <gtkmm/container.h>
 #include <gtkmm/selectiondata_private.h>
 #include <gtkmm/action.h>
+#include <gtkmm/tooltip.h>
 #include <gtk/gtkdnd.h>
 #include <gtk/gtkselection.h>
 #include <gtk/gtkwidget.h>
@@ -34,7 +35,6 @@
 #include <gtk/gtkmenuitem.h>
 #include <gtk/gtkmain.h>
 #include <gtk/gtkaction.h> //For gtk_widget_get_action().
-
 
 
 namespace //anonymous
