@@ -191,6 +191,7 @@ int main (int argc, char *argv[])
             << get_defs( GTK_TYPE_TEXT_VIEW )
             << get_defs( GTK_TYPE_TOGGLE_ACTION )            
             << get_defs( GTK_TYPE_TOGGLE_TOOL_BUTTON )  
+            << get_defs( GTK_TYPE_TOOLTIP )
             << get_defs( GTK_TYPE_TOOLTIPS )
             << get_defs( GTK_TYPE_TREE_SELECTION )
             << get_defs( GTK_TYPE_TREE_MODEL_FILTER )            
