@@ -1,3 +1,15 @@
+2007-06-30  Marko Anastasov  <marko@marko.anastasov.name>
+
+	* gtk/src/tooltip.[hg|ccg]:
+	* gtk/src/widget.[hg|ccg]: New files and functions, properties and signal
+	of the new tooltips API.
+	* gtk/gtkmm.h: Include tooltip.h.
+	* gtk/src/gtk_signals.defs: Added query_tooltip signal for Widget.
+	* gtk/src/Makefile_list_of_hg.am_fragment: Include tooltip.hg in build.
+	* tools/m4/convert_gtk.m4: Added conversions between GtkTooltip*
+	and Glib::RefPtr<Gtk::Tooltip>.
+	* tools/extra_defs_gen/generate_defs_gtk.cc: Generate defs for Tooltip.
+
 2007-06-26  Murray Cumming  <murrayc@murrayc.com>
 
 	* examples/book/builder/basic/basic.ui:
